--- a/index.scss
+++ b/index.scss
@@ -115,3 +115,11 @@ img {
         }
     }
 }
+
+#main_video {
+    video {
+        width: 100%;
+        max-height: 900px;
+        object-fit: cover;
+    }
+}
