--- a/index.scss
+++ b/index.scss
@@ -149,3 +149,45 @@ img {
         height: auto;
     }
 }
+
+.feature {
+    margin-top: 110px;
+
+    &__title {
+        @include title;
+    }
+
+    &__list {
+        margin: 40px auto 0;
+        display: grid;
+        gap: 25px;
+        grid-template-columns: repeat(auto-fit, 30%);
+        justify-content: center;
+        max-width: 1300px;
+    }
+
+    &__item {
+        box-shadow: 0px 0px 8px #00000029;
+        &_content {
+            color: #121212;
+            padding: 30px;
+            border: 1px solid #CCCCCC;
+        }
+
+        &_header {
+            font-size: 12px;
+        }
+
+        &_body {
+            font-size: 14.4px;
+            font-weight: bold;
+            margin-top: 25px;
+        }
+
+        &_footer {
+            font-size: 12px;
+            margin-top: 40px;
+            text-align: right;
+        }
+    }
+}
