--- a/index.scss
+++ b/index.scss
@@ -168,6 +168,17 @@ img {
 
     &__item {
         box-shadow: 0px 0px 8px #00000029;
+        &_picture_wrapper {
+            opacity: 0;
+            transition: .5s ease;
+            transform: translateY(10%);
+
+            &.open {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
         &_content {
             color: #121212;
             padding: 30px;
