--- a/index.scss
+++ b/index.scss
@@ -19,6 +19,7 @@ img {
     position: sticky;
     top: 0;
     background-color: #FFFFFF;
+    z-index: 5;
 
     &__wrapper {
         height: 80px;
