--- a/index.scss
+++ b/index.scss
@@ -203,3 +203,72 @@ img {
         }
     }
 }
+
+.contact {
+    margin-top: 60px;
+    padding: 0 15px;
+    background-color: #121212;
+    color: #FFFFFF;
+
+    &__title {
+        font-size: 36px;
+        font-weight: bold;
+        text-align: center;
+        padding-top: 60px;
+    }
+
+    &__content {
+        display: flex;
+        justify-content: space-between;
+        column-gap: 140px;;
+        margin: 40px auto 0;
+        max-width: 1300px;
+    }
+
+    &__message {
+        width: 50%;
+
+        p {
+            &:nth-child(2) {
+                margin-top: 36px;
+            }
+            &:nth-child(3) {
+                margin-top: 28px;
+            }
+        }
+    }
+
+    &__form {
+        width: 50%;
+
+        input, textarea {
+            background-color: #FFFFFF;
+            color: #000;
+            padding: 10px;
+            width: 100%;
+        }
+
+        dt {
+            font-weight: initial;
+        }
+
+        dd {
+            margin-bottom: 24px;
+        }
+
+        button {
+            width: 200px;
+            height: 45px;
+            border: 1px solid #FFFFFF;
+            text-align: center;
+        }
+    }
+}
+
+.footer {
+    padding: 64px 0 12px;
+    background-color: #121212;
+    color: #FFFFFF;
+    margin: auto 0;
+    text-align: center;
+}
