--- a/index.scss
+++ b/index.scss
@@ -1,3 +1,22 @@
+// map
+$breakpoint: (
+    sp: 'screen and (max-width: 600px)',
+    pc: 'screen and (min-width: 900px)',
+);
+
+// valiable
+@mixin mq($bq) {
+    @media #{map-get($breakpoint, $bq)} {
+        @content;
+    }
+}
+
+@mixin title {
+    text-align: center;
+    font-size: 36px;
+    font-weight: bold;
+}
+
 // common css
 body {
     font-family: "游ゴシック体", YuGothic, "游ゴシック Medium", "Yu Gothic Medium", "游ゴシック", "Yu Gothic", sans-serif;
@@ -6,13 +25,6 @@ body {
 img {
     width: 100%;
     object-fit: cover;
-}
-
-// valiable
-@mixin title {
-    text-align: center;
-    font-size: 36px;
-    font-weight: bold;
 }
 
 .header {
@@ -27,6 +39,11 @@ img {
         justify-content: space-between;
         align-items: center;
         padding: 0 40px;
+
+        @include mq(sp) {
+            // align-items: initial;
+            padding: 20px 15px;
+        }
     }
 
     &__logo {
@@ -130,6 +147,10 @@ img {
         width: 100%;
         max-height: 900px;
         object-fit: cover;
+
+        @include mq(sp) {
+            height: 600px;
+        }
     }
 }
 
