--- a/index.scss
+++ b/index.scss
@@ -15,6 +15,9 @@ $breakpoint: (
     text-align: center;
     font-size: 36px;
     font-weight: bold;
+    @include mq(sp) {
+        font-size: 24px;
+    }
 }
 
 // common css
@@ -156,6 +159,9 @@ img {
 
 .pickup {
     margin-top: 110px;
+    @include mq(sp) {
+        margin-top: 85px;
+    }
 
     &__title {
         @include title;
@@ -163,6 +169,9 @@ img {
 
     &__swiper {
         margin-top: 40px;
+        @include mq(sp) {
+            margin-top: 25px;
+        }
     }
 }
 
